# ros2_move_to

./: .gitignore  README.md  deps.repos
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/trajectory_loader/lib/trajectory_loader/: trajectory_loader_server  trajectory_loader_test
install/trajectory_loader/share/trajectory_loader/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/trajectory_loader/share/trajectory_loader/action/: TrajectoryLoaderAction.action  TrajectoryLoaderAction.idl
install/trajectory_loader/share/trajectory_loader/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  rosidl_cmake-extras.cmake  (+9 more)
log/: latest_build
trajectory_loader/: CMakeLists.txt  README.md  package.xml
trajectory_loader/action/: MoveToAction.action  MoveToConfAction.action  TrajectoryLoaderAction.action  TrajectoryWriterAction.action
trajectory_loader/config/: move_to_test_config.yaml  multi_move_to_test_config.yaml  multi_trajectory_loader_test_config.yaml  trajectory.yaml  trajectory_loader_test_config.yaml
trajectory_loader/launch/: move_to_server.launch.py  move_to_server.py  move_to_test.launch.py  multi_move_to_server.launch.py  multi_move_to_test.launch.py  multi_trajectory_loader_server.launch.py  multi_trajectory_loader_test.launch.py  test_move_group.launch.py  trajectory_loader.launch.py  trajectory_loader_server.launch.py  trajectory_loader_test.launch.py
trajectory_loader/src/: move_to_conf_server.cpp  move_to_server.cpp  move_to_test.cpp  test.cpp  test_move_group.cpp  trajectory_loader_server.cpp  trajectory_loader_test.cpp  trajectory_writer_server.cpp
trajectory_loader_helper/: README.md  package.xml  setup.cfg  setup.py
trajectory_loader_helper/trajectory_loader_helper/: trajectory_writer.py
(+37 files in other folders)
